# HelloQt5Vcpkg

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
